# pays

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  business-requirement.tx  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: cli.py  config.py  db.py  main.py
backend/app/api/: assets.py  deps.py  fx.py  jobs.py  news.py  topics.py
backend/app/jobs/: definitions.py  scheduler.py
backend/app/models/: __init__.py  article.py  asset.py  base.py  fx_rate.py  job_run.py  price.py  topic.py
backend/app/schemas/: __init__.py  article.py  asset.py  common.py  fx_rate.py  job_run.py  price.py  topic.py
backend/app/services/: fx.py  jobs.py  news.py  prices.py
backend/app/sources/fx/: base.py  frankfurter.py
backend/app/sources/news/: base.py  google_news.py  rss.py
backend/app/sources/prices/: base.py  yfinance_source.py
backend/tests/: conftest.py  test_api_assets.py  test_api_deps.py  test_api_fx.py  test_api_jobs.py  test_api_news.py  test_api_topics.py  test_cli.py  test_dedupe.py  test_fx_conversion.py  test_matching.py  test_scheduler.py  test_services_fx.py  test_services_jobs.py  test_services_news.py  test_services_prices.py  test_sources_fx.py  test_sources_news.py  test_sources_rss.py  test_sources_yfinance.py
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/assets-action/: route.ts
web/src/app/api/jobs-action/: route.ts
web/src/app/api/news-proxy/: route.ts
web/src/app/api/topics-action/: route.ts
web/src/app/assets/: page.tsx
web/src/app/news/: page.tsx
web/src/app/settings/: page.tsx
web/src/components/: assets-client.tsx  news-list.tsx  settings-client.tsx
